Removing some compilation warning in tests.