@@ -1,5 +1,6 @@
 package fr.loghub.naclprovider;
 
+import java.lang.reflect.InvocationTargetException;
 import java.security.KeyFactory;
 import java.security.KeyPairGenerator;
 import java.security.NoSuchAlgorithmException;
@@ -14,9 +15,9 @@ public class ProviderTest {
     
     @SuppressWarnings("unused")
     @Test
-    public void testLoad() throws InstantiationException, IllegalAccessException, ClassNotFoundException, CertificateException, NoSuchAlgorithmException {
+    public void testLoad() throws InstantiationException, IllegalAccessException, ClassNotFoundException, CertificateException, NoSuchAlgorithmException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
         System.setProperty("java.security.debug", "all");
-        Security.insertProviderAt((Provider) Class.forName("fr.loghub.naclprovider.NaclProvider").newInstance(), Security.getProviders().length + 1);
+        Security.insertProviderAt((Provider) Class.forName("fr.loghub.naclprovider.NaclProvider").getConstructor().newInstance(), Security.getProviders().length + 1);
         Provider nacl = Security.getProvider(NaclProvider.NAME);
         CertificateFactory  cf = CertificateFactory.getInstance(NaclProvider.NAME);
         KeyFactory kf = KeyFactory.getInstance(NaclProvider.NAME);
